[package]
name = "ldconfig"
version = "0.1.0"
edition = "2021"
description = "Implementation of the ldconfig glibc tool"
license = "MIT"
repository = "https://github.com/lu-zero/ldconfig"
categories = ["command-line-utilities"]
keywords = ["glibc", "ld-so-cache"]
rust-version = "1.90"

[dependencies]
anyhow = "1.0.100"
goblin = "0.10.4"
memmap2 = "0.9.9"
walkdir = "2.5.0"
bpaf = { version = "0.9", features = ["derive", "bright-color"] }
thiserror = "2.0.17"
glob = "0.3.1"
camino = "1.2.2"

[dev-dependencies]
ld-so-cache = "0.1.0"

# Examples available:
# - build_cache: Demonstrates building a cache from directories
# - test_cache_read: Shows how to read and query cache files
# - compare_caches: Compare two cache files (optionally with ld-so-cache cross-validation)
